// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderes isPomodoroActive=false 1`] = `
<button
  onClick={[MockFunction]}
>
  Start!
</button>
`;

exports[`renderes isPomodoroActive=true 1`] = `
<button
  onClick={[MockFunction]}
>
  Stop!
</button>
`;
